src/test/ui/conditional-compilation/cfg-generic-params.stderr
error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:7:45
   |
LL | type FnBad = for<#[cfg(no)] 'a, #[cfg(yes)] T> fn();
   |                                             ^

error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:12:51
   |
LL | type PolyBad = dyn for<#[cfg(no)] 'a, #[cfg(yes)] T> Copy;
   |                                                   ^

error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:17:54
   |
LL | struct WhereBad where for<#[cfg(no)] 'a, #[cfg(yes)] T> u8: Copy;
   |                                                      ^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:21:29
   |
LL | fn f_lt_yes<#[cfg_attr(yes, unknown)] 'a>() {}
   |                             ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:24:29
   |
LL | fn f_ty_yes<#[cfg_attr(yes, unknown)] T>() {}
   |                             ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:28:34
   |
LL | type FnYes = for<#[cfg_attr(yes, unknown)] 'a> fn();
   |                                  ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:33:40
   |
LL | type PolyYes = dyn for<#[cfg_attr(yes, unknown)] 'a> Copy;
   |                                        ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:38:43
   |
LL | struct WhereYes where for<#[cfg_attr(yes, unknown)] 'a> u8: Copy;
   |                                           ^^^^^^^

error[E0038]: the trait `Copy` cannot be made into an object
  --> $DIR/cfg-generic-params.rs:10:17
   |
LL | type PolyGood = dyn for<#[cfg(yes)] 'a, #[cfg(no)] T> Copy;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Copy` cannot be made into an object
   |
   = note: the trait cannot be made into an object because it requires `Self: Sized`
   = note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>

error[E0038]: the trait `Copy` cannot be made into an object
  --> $DIR/cfg-generic-params.rs:12:16
   |
LL | type PolyBad = dyn for<#[cfg(no)] 'a, #[cfg(yes)] T> Copy;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Copy` cannot be made into an object
   |
   = note: the trait cannot be made into an object because it requires `Self: Sized`
   = note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>

error[E0038]: the trait `Copy` cannot be made into an object
  --> $DIR/cfg-generic-params.rs:31:15
   |
LL | type PolyNo = dyn for<#[cfg_attr(no, unknown)] 'a> Copy; // OK
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Copy` cannot be made into an object
   |
   = note: the trait cannot be made into an object because it requires `Self: Sized`
   = note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>

error[E0038]: the trait `Copy` cannot be made into an object
  --> $DIR/cfg-generic-params.rs:33:16
   |
LL | type PolyYes = dyn for<#[cfg_attr(yes, unknown)] 'a> Copy;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Copy` cannot be made into an object
   |
   = note: the trait cannot be made into an object because it requires `Self: Sized`
   = note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0038`.
